# sobb

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/toolchains/: clang.cmake  gcc.cmake  msvc.cmake  vcvars.cmake
data/: benchmark.toml  imgui.ini  scene.toml
data/scene/: AmazonLumberyardBistro.license  camera_bint
data/shaders/: compileAll.py
data/shaders/final/: collapse_aabb.comp  collapse_aabb.comp.spv  imgui.frag  imgui.frag.spv  imgui.vert.spv  plocpp_CopyClusterIDs.comp  plocpp_CopyClusterIDs.comp.spv  plocpp_FillIndirect.comp  plocpp_FillIndirect.comp.spv  (+127 more)
src/: CMakeLists.txt
src/sobb/: Application.cpp  Application.h  ApplicationState.h  Application_imGUI.cpp  CMakeLists.txt  main.cpp
src/sobb/backend/: Config.h  RenderUtil.h  Stats.h
src/sobb/backend/data/: Input.h
src/sobb/backend/vulkan/: MyCapabilities.h  RadixSort.h  Task.cpp  Task.h  VCtx.h  Vulkan.cpp  Vulkan.h  VulkanState.h  Vulkan_imGUI.cpp
src/sobb/backend/vulkan/data/: DeviceData.h  ImGuiScene.h  Scene.cpp  Scene.h  VertexLayout.h
src/sobb/backend/vulkan/data/handler/: Geometry.h  Texture.h
src/sobb/backend/vulkan/workload/: ImGui.h  Renderer.h  Renderer_ptCompute.cpp  Renderer_ptCompute.h
src/sobb/backend/vulkan/workload/bvh/: BvhBuilder.cpp  BvhBuilder.h  Collapsing.cpp  Collapsing.h  PLOCpp.cpp  PLOCpp.h  Rearrangement.cpp  Rearrangement.h  Stats.cpp  Stats.h  Tracer.cpp  Tracer.h  Transformation.cpp  Transformation.h  Types.h
src/sobb/core/: ConfigFiles.cpp  ConfigFiles.h  GUI.h  Taskflow.h
src/sobb/module/: Animation.cpp  Animation.h  Animation_imGUI.cpp  Benchmark.cpp  Benchmark.h  Benchmark_imGUI.cpp  CameraManager.cpp  CameraManager.h  CameraManager_imGUI.cpp  SceneRenderer.h  SceneRenderer_imGUI.cpp  ShaderManager.cpp  ShaderManager.h
src/sobb/scene/: AABB.h  Camera.h  Scene.h  SceneIO.h  Serialization.cpp  Serialization.h
src/sobb/util/: pexec.h
support/lime/: CMakeLists.txt
(+56 files in other folders)
